# dealcut

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  SOC.cc  SOC_cutfem.cpp  article_layout.md  bulk.cpp  growth.cc  growth_cutfem.cpp  growth_iterative_12_cutfem.cpp  growth_iterative_cutfem.cpp  growth_iterative_lowner_cutfem.cpp  growth_iterative_nurbs_cutfem.cpp  new_instrucction.txt  run_cases.sh  square_cutlib.cpp  square_dealii.cc  step-85.cc  step85_cutfem.cpp
configs/: growth_iterative_concave.json  growth_iterative_convex.json  growth_iterative_convex_1iter.json  growth_iterative_default.json  growth_iterative_lowner_concave.json  growth_iterative_lowner_concave_hydg.json  growth_iterative_lowner_convex.json  growth_iterative_lowner_convex_hydg.json  growth_iterative_poisson_ccv_dir.json  growth_iterative_poisson_ccv_neu.json  growth_iterative_poisson_concave.json  growth_iterative_poisson_cvx_dir.json  growth_iterative_poisson_cvx_neu.json  growth_iterative_poisson_test.json  growth_iterative_soc12.json  nurbs_concave.json  nurbs_convex.json  regression_concave.json  regression_convex.json  test_crit_points.json  test_crit_points_2.json
src/: lownerjohn_ellipsoid.py
step-90/: CMakeCache.txt  Makefile  cmake_install.cmake  step-90
step-90-revolution/: CMakeLists.txt  profile.csv  step-90-revolution.cc
vis/: 25vis.pvsm
